yamls/np-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cpaas.io/project: pj-1
  name: pj-1

---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cpaas.io/project: pj-2
  name: pj-2

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: pj-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: pj-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-network-policy
  namespace: pj-2
  labels:
    cpaas.io/cluster-network-policy: "true"
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cpaas.io/project: pj-2
        - namespaceSelector:
            matchLabels:
              cpaas.io/project: pj-1

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-network-policy
  namespace: pj-1
  labels:
    cpaas.io/cluster-network-policy: "true"
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cpaas.io/project: pj-1
